Version 1.0.30:
- GNOME Keyring support now uses libsecret instead of libgnome-keyring.
- Libidn is not required for IDN support anymore on systems where getaddrinfo()
  supports the AI_IDN flag and the GnuTLS version is >= 3.4.0.
- Add proxy_host and proxy_port commands and corresponding options to use a
  SOCKS proxy.
- Remove the obsolete tls_force_sslv3 command and --tls-force-sslv3 option from
  the documentation. They are still accepted by msmtp for compatibility, but
  have no effect anymore.
- Disable SSLv3 in addition to SSLv2.
- passwordeval: Remove \r in addition to \n from command output, for Windows
  systems.

Version 1.0.29:
- Fix crash on missing argument to the --passwordeval option (Debian bug
  #716572).

Version 1.0.28:
- Fixed building of the documentation with texinfo >= 5.0.

Version 1.0.27:
- Update autotools files.
- Improve error message on connection failures in some IPv6/IPv4 situations.

Version 1.0.26:
- Always use the internal MD5 functions for the built-in CRAM-MD5
  implementation; never use the ones from OpenSSL. This fixes problems with
  configurations that use OpenSSL and do not use GNU SASL. Thanks to Gleydson
  Soares and Moritz Wilhelmy for providing information and for testing the fix.
- Fix a compiler warning with current OpenSSL versions.

Version 1.0.25:
- Fix DIGEST-MD5 authentication, accidentally broken in 1.0.23.
- Deprecate DIGEST-MD5 authentication as per RFC 6331.

Version 1.0.24:
- Remove unmaintained translations (es, pt_BR).
- Simplify manual license: use a simple permissive license instead of GNU FDL.
- Replace a call to gnutls_protocol_set_priority(), which is deprecated in
  GnuTLS >= 2.12.0. Fixes Debian bug #624048.
- Remove gnulib, for simplicity and maintainability.
- Update GNU autotools files, in particular configure.ac.

Version 1.0.23:
- Fix authentication with SCRAM-SHA-1 via libgsasl. Reported and analyzed by
  Steffen Lehmann.

Version 1.0.22: