@@ -1,4 +1,6 @@
 Version 1.0.30:
+- The GSSAPI authentication method is not chosen automatically anymore, you have
+  to request it manually if you really want to use it.
 - GNOME Keyring support now uses libsecret instead of libgnome-keyring.
 - Libidn is not required for IDN support anymore on systems where getaddrinfo()
   supports the AI_IDN flag and the GnuTLS version is >= 3.4.0.
